Fixed regression in resume page sidebar, tweaked some spacing

--- a/style.css
+++ b/style.css
@@ -278,6 +278,10 @@ footer {
     margin-right: 0em;
   }
 
+  header {
+    line-height: 1;
+  }
+
   .references-section {
     grid-auto-flow: column;
     grid-template-columns: repeat(1, 1fr);
